--- a/contoh.html
+++ b/contoh.html
@@ -8,26 +8,29 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-    <div class="row border border-danger border-2 rounded p-1 m-3">
-        <img src="https://github.com/ahmadWahyu7/data-gambar/blob/main/hyules-assets/latihan-assets/icon_hiraganaList.png?raw=true" alt="gambarhiragana" class="col-4"/>
-        <div class="description ps-3 col-8">
-            <h3>Hiragana list</h3>
-            <p>Menampilkan list huruf Hiragana secara acak</p>
-        </div>
-    </div>
-    <div class="row border border-danger border-2 rounded p-3 m-3">
-        <img src="https://github.com/ahmadWahyu7/data-gambar/blob/main/hyules-assets/latihan-assets/icon_hiraganaList.png?raw=true" alt="gambarhiragana" class="col-4"/>
-        <div class="description ps-3 col-8">
-            <h3>Hiragana list</h3>
-            <p>Menampilkan list huruf Hiragana secara acak</p>
-        </div>
-    </div>
-    <div class="row border border-danger border-2 rounded p-3 m-3">
-        <img src="https://github.com/ahmadWahyu7/data-gambar/blob/main/hyules-assets/latihan-assets/icon_hiraganaList.png?raw=true" alt="gambarhiragana" class="col-4"/>
-        <div class="description ps-3 col-8">
-            <h3>Hiragana list</h3>
-            <p>Menampilkan list huruf Hiragana secara acak</p>
-        </div>
+    <div class="p-3">
+      <table class="table table-bordered border-secondary">
+        <thead>
+          <tr class="text-center">
+            <th scope="col">Kosakata</th>
+            <th scope="col">Bahasa Jepang</th>
+          </tr>
+        </thead>
+        <tbody class="table-group-divider">
+          <tr>
+            <td>Mark</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <td>Jacob</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <td>Jacob</td>
+            <td>@fat</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   </body>
